--- a/task.html
+++ b/task.html
@@ -130,45 +130,35 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined">
-                    arrow_drop_down
+                  <span class="edit-content active">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> note </span>
+                        הערה</span
+                      >
+                    </span>
                   </span>
-                  <div class="sidebar-menu inner">
-                    <div class="group">
-                      <div class="group-fields">
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                note
-                              </span>
-                              הערה</span
-                            >
-                          </span>
+                  <span class="edit-content active">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> mail </span>
+                        מייל</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content active">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          attach_file
                         </span>
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                mail
-                              </span>
-                              מייל</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                attach_file
-                              </span>
-                              קובץ</span
-                            >
-                          </span>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
+                        קובץ</span
+                      >
+                    </span>
+                  </span>
+                  <span class="material-symbols-outlined btn-default">
+                    expand_content
+                  </span>
                 </div>
               </div>
               <div class="group">
@@ -218,8 +208,8 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined">
-                    arrow_drop_down
+                  <span class="material-symbols-outlined btn-default">
+                    expand_content
                   </span>
                 </div>
               </div>
@@ -242,12 +232,109 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined">
-                    arrow_drop_down
+                  <span class="material-symbols-outlined btn-default">
+                    expand_content
                   </span>
                 </div>
               </div>
-              <div class="expand-more">
+              <div class="group active">
+                <div class="group-name">תעודה</div>
+                <div class="group-fields">
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> person </span>
+                        משלוח</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        החזרה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        ריכוז</span
+                      >
+                    </span>
+                  </span>
+                  <span class="material-symbols-outlined btn-default">
+                    expand_content
+                  </span>
+                </div>
+              </div>
+              <div class="group active">
+                <div class="group-name">חשבונית עסקה</div>
+                <div class="group-fields">
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> person </span>
+                        עסקה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        זיכוי</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        ריכוז</span
+                      >
+                    </span>
+                  </span>
+                  <span class="material-symbols-outlined btn-default">
+                    expand_content
+                  </span>
+                </div>
+              </div>
+              <div class="group active">
+                <div class="group-name">חשבונית מס</div>
+                <div class="group-fields">
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> person </span>
+                        מס</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        זיכוי</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        ריכוז</span
+                      >
+                    </span>
+                  </span>
+                  <span class="material-symbols-outlined btn-default">
+                    expand_content
+                  </span>
+                </div>
+              </div>
+
+              <div class="expand-more" id="expand-groups">
                 <span>עוד</span>
                 <span class="material-symbols-outlined"> more_horiz </span>
               </div>
