--- a/task.html
+++ b/task.html
@@ -130,7 +130,7 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content active">
+                  <span class="edit-content not-visible">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined"> note </span>
@@ -138,7 +138,7 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content active">
+                  <span class="edit-content not-visible">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined"> mail </span>
@@ -146,7 +146,7 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content active">
+                  <span class="edit-content not-visible">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
@@ -156,7 +156,10 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined btn-default">
+                  <span
+                    class="material-symbols-outlined btn-default"
+                    id="show-more-fields"
+                  >
                     expand_content
                   </span>
                 </div>
