--- a/task.html
+++ b/task.html
@@ -157,7 +157,7 @@
                     </span>
                   </span>
                   <span
-                    class="material-symbols-outlined btn-default"
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
                     id="show-more-fields"
                   >
                     expand_content
@@ -211,7 +211,9 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined btn-default">
+                  <span
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
+                  >
                     expand_content
                   </span>
                 </div>
@@ -235,7 +237,9 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined btn-default">
+                  <span
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
+                  >
                     expand_content
                   </span>
                 </div>
@@ -267,7 +271,9 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined btn-default">
+                  <span
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
+                  >
                     expand_content
                   </span>
                 </div>
@@ -299,7 +305,9 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined btn-default">
+                  <span
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
+                  >
                     expand_content
                   </span>
                 </div>
@@ -331,17 +339,30 @@
                       >
                     </span>
                   </span>
-                  <span class="material-symbols-outlined btn-default">
+                  <span
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
+                  >
                     expand_content
                   </span>
                 </div>
               </div>
-
+            
               <div class="expand-more" id="expand-groups">
                 <span>עוד</span>
                 <span class="material-symbols-outlined"> more_horiz </span>
               </div>
+
+
+              <div class="reduced-groups">
+                <div class="reduced-group">
+                  <span class="material-symbols-outlined"> person </span>
+                  </span>
+                  <span>כרטיס</span>
+                </div>
+              </div>
             </div>
+
+            
           </li>
 
           <li class="side-nav__content--list__item" id="homeBtn">
