--- a/task.html
+++ b/task.html
@@ -104,7 +104,23 @@
             </div>
             <div class="sidebar-menu">
               <div class="group">
-                <div class="group-name">כרטיס</div>
+                <div class="group-name">
+                  <div>
+                    <span>כרטיס</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span class="material-symbols-outlined btn-default close-expand-new">
+                      close
+                    </span>
+                    <span class="material-symbols-outlined btn-default expend-btn">
+                      arrows_more_up
+                    </span>
+                    <span class="material-symbols-outlined btn-default minimize" data-target="box1">
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
+
                 <div class="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
@@ -165,7 +181,23 @@
                 </div>
               </div>
               <div class="group">
-                <div class="group-name">פעולה</div>
+                <div class="group-name">
+                  <div>
+                    <span>פעולה</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span class="material-symbols-outlined btn-default close-expand-new">
+                      close
+                    </span>
+                    <span class="material-symbols-outlined btn-default expend-btn">
+                      arrows_more_up
+                    </span>
+                    <span class="material-symbols-outlined btn-default minimize" data-target="box1">
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
+                
                 <div class="group-topics">
                   <div class="topic green-clicked" id="topic-green">
                     <span class="material-symbols-outlined"> circle </span>
