--- a/task.html
+++ b/task.html
@@ -251,7 +251,22 @@
                 </div>
               </div>
               <div class="group">
-                <div class="group-name">מכירות</div>
+                <div class="group-name">
+                  <div>
+                    <span>מכירות</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span class="material-symbols-outlined btn-default close-expand-new">
+                      close
+                    </span>
+                    <span class="material-symbols-outlined btn-default expend-btn">
+                      arrows_more_up
+                    </span>
+                    <span class="material-symbols-outlined btn-default minimize" data-target="box1">
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
                 <div class="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
@@ -277,7 +292,22 @@
                 </div>
               </div>
               <div class="group active">
-                <div class="group-name">תעודה</div>
+                <div class="group-name">
+                  <div>
+                    <span>תעודה</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span class="material-symbols-outlined btn-default close-expand-new">
+                      close
+                    </span>
+                    <span class="material-symbols-outlined btn-default expend-btn">
+                      arrows_more_up
+                    </span>
+                    <span class="material-symbols-outlined btn-default minimize" data-target="box1">
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
                 <div class="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
@@ -311,7 +341,22 @@
                 </div>
               </div>
               <div class="group active">
-                <div class="group-name">חשבונית עסקה</div>
+                <div class="group-name">
+                  <div>
+                    <span>חשבונית עסקה</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span class="material-symbols-outlined btn-default close-expand-new">
+                      close
+                    </span>
+                    <span class="material-symbols-outlined btn-default expend-btn">
+                      arrows_more_up
+                    </span>
+                    <span class="material-symbols-outlined btn-default minimize" data-target="box1">
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
                 <div class="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
@@ -345,7 +390,22 @@
                 </div>
               </div>
               <div class="group active">
-                <div class="group-name">חשבונית מס</div>
+                <div class="group-name">
+                  <div>
+                    <span>חשבונית מס</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span class="material-symbols-outlined btn-default close-expand-new">
+                      close
+                    </span>
+                    <span class="material-symbols-outlined btn-default expend-btn">
+                      arrows_more_up
+                    </span>
+                    <span class="material-symbols-outlined btn-default minimize" data-target="box1">
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
                 <div class="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
