--- a/task.html
+++ b/task.html
@@ -271,7 +271,7 @@
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined"> person </span>
+                        <span class="material-symbols-outlined"> attach_money </span>
                         הצעה</span
                       >
                     </span>
@@ -312,7 +312,7 @@
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined"> person </span>
+                        <span class="material-symbols-outlined"> orders </span>
                         משלוח</span
                       >
                     </span>
@@ -320,7 +320,7 @@
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined"> domain </span>
+                        <span class="material-symbols-outlined"> attach_money </span>
                         החזרה</span
                       >
                     </span>
@@ -361,7 +361,7 @@
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined"> person </span>
+                        <span class="material-symbols-outlined"> attach_money </span>
                         עסקה</span
                       >
                     </span>
@@ -369,7 +369,7 @@
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined"> domain </span>
+                        <span class="material-symbols-outlined"> attach_money </span>
                         זיכוי</span
                       >
                     </span>
@@ -410,7 +410,7 @@
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined"> person </span>
+                        <span class="material-symbols-outlined"> attach_money </span>
                         מס</span
                       >
                     </span>
@@ -418,7 +418,7 @@
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined"> domain </span>
+                        <span class="material-symbols-outlined"> attach_money </span>
                         זיכוי</span
                       >
                     </span>
