--- a/task.html
+++ b/task.html
@@ -451,6 +451,31 @@
                   </span>
                   <span>כרטיס</span>
                 </div>
+                <div class="reduced-group">
+                  <span class="material-symbols-outlined"> person </span>
+                  </span>
+                  <span>פעולה</span>
+                </div>
+                <div class="reduced-group">
+                  <span class="material-symbols-outlined"> attach_money </span>
+                  </span>
+                  <span>מכירות</span>
+                </div>
+                <div class="reduced-group">
+                  <span class="material-symbols-outlined"> description </span>
+                  </span>
+                  <span>תעודה</span>
+                </div>
+                <div class="reduced-group">
+                  <span class="material-symbols-outlined"> attach_money </span>
+                  </span>
+                  <span>חשבונית עסקה</span>
+                </div>
+                <div class="reduced-group">
+                  <span class="material-symbols-outlined"> attach_money </span>
+                  </span>
+                  <span>חשבונית מס</span>
+                </div>
               </div>
             </div>
 
