--- a/task.html
+++ b/task.html
@@ -291,7 +291,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group active">
+              <div class="group group-hidden active">
                 <div class="group-name">
                   <div>
                     <span>תעודה</span>
@@ -340,7 +340,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group active">
+              <div class="group group-hidden active">
                 <div class="group-name">
                   <div>
                     <span>חשבונית עסקה</span>
@@ -389,7 +389,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group active">
+              <div class="group group-hidden active">
                 <div class="group-name">
                   <div>
                     <span>חשבונית מס</span>
@@ -440,7 +440,7 @@
               </div>
             
               <div class="expand-more" id="expand-groups">
-                <span>עוד</span>
+                <span class="more-less">עוד</span>
                 <span class="material-symbols-outlined"> more_horiz </span>
               </div>
 
