--- a/task.html
+++ b/task.html
@@ -187,7 +187,55 @@
                   </span>
                 </div>
               </div>
-              <div class="group">
+              <div class="group green">
+                <div class="group-name">
+                  <div>
+                    <span>שלח</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span
+                      class="material-symbols-outlined btn-default close-expand-new"
+                    >
+                      close
+                    </span>
+                    <span
+                      class="material-symbols-outlined btn-default expend-btn"
+                    >
+                      arrows_more_up
+                    </span>
+                    <span
+                      class="material-symbols-outlined btn-default minimize"
+                    >
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
+                <div class="group-fields">
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> mail </span>
+                        מייל</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> sms </span>
+                        SMS</span
+                      >
+                    </span>
+                  </span>
+
+                  <span
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
+                  >
+                    expand_content
+                  </span>
+                </div>
+              </div>
+              <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>תכנון לעתיד</span>
@@ -284,7 +332,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group">
+              <div class="group blue">
                 <div class="group-name">
                   <div>
                     <span>תיעוד</span>
