--- a/task.html
+++ b/task.html
@@ -103,7 +103,7 @@
               <span class="material-symbols-outlined btn-default"> add </span>
             </div>
             <div class="sidebar-menu">
-              <div class="group">
+              <div class="group blue">
                 <div class="group-name">
                   <div>
                     <span>כרטיס</span>
@@ -187,7 +187,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group green">
+              <div class="group blue">
                 <div class="group-name">
                   <div>
                     <span>שלח</span>
@@ -235,7 +235,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group green">
+              <div class="group purple">
                 <div class="group-name">
                   <div>
                     <span>תכנון לעתיד</span>
@@ -332,7 +332,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group blue">
+              <div class="group purple">
                 <div class="group-name">
                   <div>
                     <span>תיעוד</span>
@@ -429,7 +429,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group">
+              <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>קדם מכירות</span>
@@ -499,7 +499,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group">
+              <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>חשבונית/קבלה</span>
@@ -568,7 +568,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group">
+              <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>זיכויים</span>
@@ -624,7 +624,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group">
+              <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>הוראות</span>
