--- a/task.html
+++ b/task.html
@@ -106,6 +106,12 @@
               <div class="group blue">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>כרטיס</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -127,7 +133,6 @@
                     </span>
                   </div>
                 </div>
-
                 <div class="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
@@ -190,6 +195,12 @@
               <div class="group blue">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>שלח</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -238,6 +249,12 @@
               <div class="group purple">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>תכנון לעתיד</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -258,7 +275,6 @@
                     </span>
                   </div>
                 </div>
-
                 <div class="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
@@ -335,6 +351,12 @@
               <div class="group purple">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>תיעוד</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -432,6 +454,12 @@
               <div class="group green">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>קדם מכירות</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -502,6 +530,12 @@
               <div class="group green">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>חשבונית/קבלה</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -571,6 +605,12 @@
               <div class="group green">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>זיכויים</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -627,6 +667,12 @@
               <div class="group green">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>הוראות</span>
                   </div>
                   <div class="dynamic-btns-group">
@@ -694,6 +740,12 @@
               <div class="group">
                 <div class="group-name">
                   <div>
+                    <span
+                      class="material-symbols-outlined fill-icon"
+                      style="font-size: 17px; margin-bottom: 3px"
+                    >
+                      circle
+                    </span>
                     <span>לוגיסטיקה</span>
                   </div>
                   <div class="dynamic-btns-group">
