--- a/person.html
+++ b/person.html
@@ -100,7 +100,9 @@
                 <span class="material-symbols-outlined"> create </span>
                 <div>צור</div>
               </a>
-              <span class="material-symbols-outlined btn-default"> add </span>
+              <span class="material-symbols-outlined btn-default">
+                person
+              </span>
             </div>
           </li>
 
