--- a/task.html
+++ b/task.html
@@ -97,10 +97,23 @@
           <li class="side-nav__content--list__item create-item">
             <div class="item-name">
               <a href="#">
-                <span class="material-symbols-outlined"> create </span>
-                <div>צור</div>
+                <span class="material-symbols-outlined"> add </span>
+                <div>חדש</div>
               </a>
-              <span class="material-symbols-outlined btn-default"> add </span>
+              <div class="icons-container">
+                <span class="material-symbols-outlined btn-default">
+                  person
+                </span>
+                <span class="material-symbols-outlined btn-default">
+                  attach_money
+                </span>
+                <span class="material-symbols-outlined btn-default">
+                  move_to_inbox
+                </span>
+                <span class="material-symbols-outlined btn-default">
+                  task_alt
+                </span>
+              </div>
             </div>
             <div class="sidebar-menu">
               <div class="group blue">
