--- a/task.html
+++ b/task.html
@@ -97,8 +97,8 @@
           <li class="side-nav__content--list__item create-item">
             <div class="item-name">
               <a href="#">
-                <span class="material-symbols-outlined"> add </span>
-                <div>חדש</div>
+                <!-- <span class="material-symbols-outlined"> add </span> -->
+                <div>צור חדש</div>
               </a>
               <div class="icons-container">
                 <span class="material-symbols-outlined btn-default">
