--- a/task.html
+++ b/task.html
@@ -1119,6 +1119,15 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
+                  <span class="edit-content purple">
+                    <!-- <span class="label">
+                      <span>סטטוס</span>
+                    </span> -->
+                    <span class="edit-field">
+                      <span class="value-text">תגית סגולה</span>
+                    </span>
+                    <!-- <div class="edit-content-menu"></div> -->
+                  </span>
                   <span class="edit-content gray" id="top-menu-example">
                     <span class="edit-field">
                       <span class="value-text">
