--- a/task.html
+++ b/task.html
@@ -98,19 +98,19 @@
             <div class="item-name">
               <a href="#">
                 <!-- <span class="material-symbols-outlined"> add </span> -->
-                <div>צור חדש</div>
+                <div>צור</div>
               </a>
               <div class="icons-container">
-                <span class="material-symbols-outlined btn-default">
+                <span class="material-symbols-outlined create-icon">
                   person
                 </span>
-                <span class="material-symbols-outlined btn-default">
+                <span class="material-symbols-outlined create-icon">
                   attach_money
                 </span>
-                <span class="material-symbols-outlined btn-default">
+                <span class="material-symbols-outlined create-icon">
                   move_to_inbox
                 </span>
-                <span class="material-symbols-outlined btn-default">
+                <span class="material-symbols-outlined create-icon">
                   task_alt
                 </span>
               </div>
