--- a/task.html
+++ b/task.html
@@ -97,7 +97,7 @@
           <li class="side-nav__content--list__item create-item">
             <div class="item-name">
               <a href="#">
-                <!-- <span class="material-symbols-outlined"> add </span> -->
+                <span class="material-symbols-outlined"> add </span>
                 <div>צור</div>
               </a>
               <div class="icons-container">
@@ -247,6 +247,8 @@
                   </span>
                 </div>
               </div>
+            </div>
+            <div class="sidebar-menu active">
               <div class="group purple">
                 <div class="group-name">
                   <div>
@@ -440,6 +442,8 @@
                   </span>
                 </div>
               </div>
+            </div>
+            <div class="sidebar-menu active">
               <div class="group green">
                 <div class="group-name">
                   <div>
@@ -841,40 +845,6 @@
               <!-- <div class="expand-more" id="expand-groups">
                 <span class="more-less">עוד</span>
                 <span class="material-symbols-outlined"> more_horiz </span>
-              </div> -->
-
-              <!-- 
-              <div class="reduced-groups">
-                <div class="reduced-group">
-                  <span class="material-symbols-outlined"> person </span>
-                  </span>
-                  <span>כרטיס</span>
-                </div>
-                <div class="reduced-group">
-                  <span class="material-symbols-outlined"> person </span>
-                  </span>
-                  <span>פעולה</span>
-                </div>
-                <div class="reduced-group">
-                  <span class="material-symbols-outlined"> attach_money </span>
-                  </span>
-                  <span>מכירות</span>
-                </div>
-                <div class="reduced-group">
-                  <span class="material-symbols-outlined"> description </span>
-                  </span>
-                  <span>תעודה</span>
-                </div>
-                <div class="reduced-group">
-                  <span class="material-symbols-outlined"> attach_money </span>
-                  </span>
-                  <span>חשבונית עסקה</span>
-                </div>
-                <div class="reduced-group">
-                  <span class="material-symbols-outlined"> attach_money </span>
-                  </span>
-                  <span>חשבונית מס</span>
-                </div>
               </div> -->
             </div>
           </li>
