--- a/task.html
+++ b/task.html
@@ -101,21 +101,33 @@
                 <div>צור</div>
               </a>
               <div class="icons-container">
-                <span class="material-symbols-outlined create-icon">
+                <span
+                  class="material-symbols-outlined create-icon"
+                  data-color="blue"
+                >
                   person
                 </span>
-                <span class="material-symbols-outlined create-icon">
+                <span
+                  class="material-symbols-outlined create-icon"
+                  data-color="green"
+                >
                   attach_money
                 </span>
-                <span class="material-symbols-outlined create-icon">
+                <span
+                  class="material-symbols-outlined create-icon"
+                  data-color="purple"
+                >
                   move_to_inbox
                 </span>
-                <span class="material-symbols-outlined create-icon">
+                <span
+                  class="material-symbols-outlined create-icon"
+                  data-color="red"
+                >
                   task_alt
                 </span>
               </div>
             </div>
-            <div class="sidebar-menu">
+            <div class="sidebar-menu active" data-color="blue">
               <div class="group blue">
                 <div class="group-name">
                   <div>
@@ -248,7 +260,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar-menu active">
+            <div class="sidebar-menu active" data-color="green">
               <div class="group purple">
                 <div class="group-name">
                   <div>
@@ -443,7 +455,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar-menu active">
+            <div class="sidebar-menu active" data-color="purple">
               <div class="group green">
                 <div class="group-name">
                   <div>
@@ -847,6 +859,7 @@
                 <span class="material-symbols-outlined"> more_horiz </span>
               </div> -->
             </div>
+            <div class="sidebar-menu active" data-color="red"></div>
           </li>
 
           <li class="side-nav__content--list__item" id="homeBtn">
