--- a/task.html
+++ b/task.html
@@ -718,71 +718,7 @@
                   </span>
                 </div>
               </div>
-              <div class="group">
-                <div class="group-name">
-                  <div>
-                    <span>לוגיסטיקה</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
-                  </div>
-                </div>
 
-                <div class="group-fields">
-                  <span class="edit-content medium">
-                    <span class="edit-field">
-                      <span class="value-text">
-                        <span class="material-symbols-outlined"> paid </span>
-                        תעודת משלוח</span
-                      >
-                    </span>
-                  </span>
-                  <span class="edit-content medium">
-                    <span class="edit-field">
-                      <span class="value-text">
-                        <span class="material-symbols-outlined"> paid </span>
-                        תעודת החזרה</span
-                      >
-                    </span>
-                  </span>
-                  <span class="edit-content medium">
-                    <span class="edit-field">
-                      <span class="value-text">
-                        <span class="material-symbols-outlined"> shop </span>
-                        כניסה למלאי</span
-                      >
-                    </span>
-                  </span>
-                  <span class="edit-content medium">
-                    <span class="edit-field">
-                      <span class="value-text">
-                        <span class="material-symbols-outlined"> shop </span>
-                        יציאה מהמלאי</span
-                      >
-                    </span>
-                  </span>
-
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                  >
-                    expand_content
-                  </span>
-                </div>
-              </div>
               <!-- <div class="group">
                 <div class="group-name">
                   <div>
@@ -859,7 +795,73 @@
                 <span class="material-symbols-outlined"> more_horiz </span>
               </div> -->
             </div>
-            <div class="sidebar-menu active" data-color="red"></div>
+            <div class="sidebar-menu active" data-color="red">
+              <div class="group">
+                <div class="group-name">
+                  <div>
+                    <span>לוגיסטיקה</span>
+                  </div>
+                  <div class="dynamic-btns-group">
+                    <span
+                      class="material-symbols-outlined btn-default close-expand-new"
+                    >
+                      close
+                    </span>
+                    <span
+                      class="material-symbols-outlined btn-default expend-btn"
+                    >
+                      arrows_more_up
+                    </span>
+                    <span
+                      class="material-symbols-outlined btn-default minimize"
+                    >
+                      arrows_more_down
+                    </span>
+                  </div>
+                </div>
+
+                <div class="group-fields">
+                  <span class="edit-content medium">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> paid </span>
+                        תעודת משלוח</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content medium">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> paid </span>
+                        תעודת החזרה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content medium">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> shop </span>
+                        כניסה למלאי</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content medium">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> shop </span>
+                        יציאה מהמלאי</span
+                      >
+                    </span>
+                  </span>
+
+                  <span
+                    class="material-symbols-outlined btn-default show-on-hover-btn"
+                  >
+                    expand_content
+                  </span>
+                </div>
+              </div>
+            </div>
           </li>
 
           <li class="side-nav__content--list__item" id="homeBtn">
